--- a/src/main/webapp/home.css
+++ b/src/main/webapp/home.css
@@ -119,7 +119,6 @@ section {
 
 .heading {
     text-align: center;
-    
     padding: 2rem 0;
     padding-bottom: 3rem;
     font-size: 3.5rem;
@@ -127,15 +126,27 @@ section {
 }
 
 .heading span {
-    /* background: #e0e6dd; */
-    
     font-size: 35px;
     color: #ffffff;
     display: inline-block;
     padding: 10px;
-    
+}
 
-    /* border-radius: 50px; */
+.cust-fed-head {
+    text-align: center;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+    font-size: 2.5rem;
+    color: #000000;
+    margin-bottom: -15px;
+    margin-top: -12px;
+}
+
+.cust-fed-head span {
+    font-size: 35px;
+    color: #519259;
+    display: inline-block;
+    padding: 10px;
 }
 
 .btn {
@@ -170,9 +181,10 @@ section {
     cursor: pointer;
 }
 
-.btn2:hover, .btn3:hover {
+.btn2:hover,
+.btn3:hover {
     background: rgb(27, 27, 27);
-    
+
     color: #ffffff;
 }
 
@@ -186,7 +198,7 @@ section {
     border-top-left-radius: 35px;
     color: #fff;
     background: #65B741;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
 .header {
@@ -403,6 +415,10 @@ section {
     background: #c8c8c8;
     border-radius: 15px;
     margin: 1.5rem;
+    margin-bottom: -5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.281);
+    /* Adjust the values as needed */
+
 }
 
 .categories .box-container {
@@ -578,4 +594,86 @@ form button .fa-solid {
 .social-icons .fa-brands:hover {
     background: rgb(8, 59, 8);
     color: white;
+}
+
+.feed-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.feedbacks{
+    background: transparent;
+    padding: 20px;
+    border-radius: 15px;
+    margin: 15px;
+}
+
+.f-box {
+    width: 500px;
+    height: 180px;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.103);
+    background-color: white;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+}
+
+.profile-img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+}
+
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+
+.name-user span{
+    color: #979797;
+    font-size: 11px;
+    text-transform: none;
+}
+
+.reviews{
+    color: rgb(233, 233, 0);
+    font-size: 13px;
+}
+
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.feed-comment p{
+    font-size: 13px;
+    line-height: 18px;
+    color: #4b4b4b;
+    text-transform: none;
+    /* text-align: justify; */
 }
